--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 CHANGES
 *******
 
+0.4.4-1 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 0.4.4 (2012-11-28)
 ==================
 
